@@ -1,5 +1,8 @@
 2014-02-07  Lars Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-srvr.el (gnus-server-toggle-cloud-server): New command and
+	keystroke.
+
 	* ietf-drums.el (ietf-drums-parse-address): Don't bug out when called
 	with an empty string.
 
